manifestos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-test
  namespace: apptest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-test
  template:
    metadata:
      labels:
        app: app-test
    spec:
      containers:
        - name: app-test
          image: welignton/apptest:e796eb3
          ports:
            - containerPort: 9000
