manifestos/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: apptest
  labels:
    monitoring: enabled
    app: app-test
spec:
  selector:
    app: app-test
  ports:
    - name: metrics
      protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
